<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="392dp"
            android:layout_height="153dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="120dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="9dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                    android:textAlignment="center"/>
            <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/nameEt"
                    android:ems="10"
                    android:id="@+id/nameEditText" android:layout_weight="1" android:autofillHints=""
                    android:hint="@string/nameet"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/CounttV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
                    android:textAlignment="center"/>
            <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/countET"
                    android:ems="10"
                    android:id="@+id/counteditText" android:layout_weight="1" android:autofillHints=""
                    android:hint="@string/countTv"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/pricetV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                    android:textAlignment="center"/>
            <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/priceET"
                    android:ems="10"
                    android:id="@+id/priceeditText" android:layout_weight="1" android:autofillHints=""
                    android:hint="@string/pr"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>